[package]
name = "bevy_missing_texture"
description = "A library to help with missing textures in bevy"
version = "0.1.2"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0", default-features = false, features = ["bevy_asset", "bevy_render"] }

[dev-dependencies]
bevy = "0.11.0"
